// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analytics root component renders container with cards-pf class for empty state 1`] = `
<div
  className="row cards-pf"
  id="migration-analytics"
>
  <AnalyticsEmptyState
    onGetStartedClick={[Function]}
  />
</div>
`;

exports[`Analytics root component renders container without cards-pf class for other screens 1`] = `
<div
  className=""
  id="migration-analytics"
>
  <Connect(AnalyticsSummary)
    onCollectInventoryClick={[Function]}
  />
</div>
`;

exports[`Analytics root component renders toolbar and empty state correctly 1`] = `
<Fragment>
  <Toolbar>
    <BreadcrumbItem
      active={true}
    >
      Compute
    </BreadcrumbItem>
    <BreadcrumbItem
      active={true}
    >
      Migration
    </BreadcrumbItem>
    <BreadcrumbItem
      active={true}
    >
      <strong>
        Migration Analytics
      </strong>
    </BreadcrumbItem>
  </Toolbar>
  <AnalyticsContainer
    currentScreen="EMPTY_STATE"
  >
    <AnalyticsEmptyState
      onGetStartedClick={[Function]}
    />
  </AnalyticsContainer>
</Fragment>
`;
